--- a/docs/theme.css
+++ b/docs/theme.css
@@ -33,7 +33,7 @@ div#app:empty:before {
 }
 
 .progress {
-    background-color: var(--theme-color, #da291c);
+    background-color: var(--theme-color, #5e1cda);
     height: 2px;
     left: 0;
     position: fixed;
@@ -45,7 +45,7 @@ div#app:empty:before {
 }
 
 .search .search-keyword, .search a:hover {
-    color: var(--theme-color, #da291c)
+    color: var(--theme-color, #5e1cda)
 }
 
 .search .search-keyword {
@@ -132,11 +132,11 @@ li input[type=checkbox] {
 }
 
 .app-nav a.active, .app-nav a:hover {
-    color: var(--theme-color, #da291c)
+    color: var(--theme-color, #5e1cda)
 }
 
 .app-nav a.active {
-    border-bottom: 2px solid var(--theme-color, #da291c)
+    border-bottom: 2px solid var(--theme-color, #5e1cda)
 }
 
 .app-nav li {
@@ -202,7 +202,7 @@ li input[type=checkbox] {
 
 .github-corner svg {
     color: #fff;
-    fill: var(--theme-color, #da291c);
+    fill: var(--theme-color, #5e1cda);
     height: 80px;
     width: 80px
 }
@@ -332,7 +332,7 @@ main.hidden {
 }
 
 .sidebar-toggle span {
-    background-color: var(--theme-color, #da291c);
+    background-color: var(--theme-color, #5e1cda);
     display: block;
     margin-bottom: 4px;
     width: 16px;
@@ -609,10 +609,10 @@ section.cover ul {
 }
 
 section.cover .cover-main>p:last-child a {
-    border: 1px solid var(--theme-color, #da291c);
+    border: 1px solid var(--theme-color, #5e1cda);
     border-radius: 2rem;
     box-sizing: border-box;
-    color: var(--theme-color, #da291c);
+    color: var(--theme-color, #5e1cda);
     display: inline-block;
     font-size: 1.05rem;
     letter-spacing: .1rem;
@@ -623,7 +623,7 @@ section.cover .cover-main>p:last-child a {
 }
 
 section.cover .cover-main>p:last-child a:last-child {
-    background-color: var(--theme-color, #da291c);
+    background-color: var(--theme-color, #5e1cda);
     color: #fff
 }
 
@@ -637,12 +637,12 @@ section.cover .cover-main>p:last-child a:hover {
 }
 
 section.cover blockquote>p>a {
-    border-bottom: 2px solid var(--theme-color, #da291c);
+    border-bottom: 2px solid var(--theme-color, #5e1cda);
     transition: color .3s
 }
 
 section.cover blockquote>p>a:hover {
-    color: var(--theme-color, #da291c)
+    color: var(--theme-color, #5e1cda)
 }
 
 .sidebar, body {
@@ -677,7 +677,7 @@ section.cover blockquote>p>a:hover {
 
 .sidebar ul li.active>a {
     border-right: 2px solid;
-    color: var(--theme-color, #da291c);
+    color: var(--theme-color, #5e1cda);
     font-weight: 600
 }
 
@@ -693,13 +693,13 @@ section.cover blockquote>p>a:hover {
 }
 
 .markdown-section a:not([class^="fc-"]) {
-    color: var(--theme-color, #da291c);
+    color: var(--theme-color, #5e1cda);
     font-weight: 600
 }
 
 .markdown-section h1 {
     font-size: 2rem;
-    margin: 0 0 1rem
+    margin: 0 0 1rem;
 }
 
 .markdown-section h2 {
@@ -739,7 +739,7 @@ section.cover blockquote>p>a:hover {
 }
 
 .markdown-section blockquote {
-    border-left: 4px solid var(--theme-color, #da291c);
+    border-left: 4px solid var(--theme-color, #5e1cda);
     color: #858585;
     margin: 2em 0;
     padding-left: 20px
@@ -808,7 +808,7 @@ section.cover blockquote>p>a:hover {
 }
 
 .token.string {
-    color: var(--theme-color, #da291c)
+    color: var(--theme-color, #5e1cda)
 }
 
 .token.selector {
@@ -824,7 +824,7 @@ section.cover blockquote>p>a:hover {
 }
 
 .token.attr-value, .token.control, .token.directive, .token.unit {
-    color: var(--theme-color, #da291c)
+    color: var(--theme-color, #5e1cda)
 }
 
 .token.keyword {
